# storm-native-libs

./: .gitignore  Jenkinsfile  README.md  pom.xml
native/: .gitignore  Makefile.am  Makefile.orig  README.md  Readme.md  bootstrap  configure.ac
native/common/: .gitignore  Makefile.am  fs_acl.hpp  fs_errors.cpp  fs_errors.hpp  genericfs.cpp  genericfs.hpp  pass_vector_by_value_java.i  storm_exceptions.i  types.i  users_and_groups.cpp  users_and_groups.hpp  util.cpp
native/cutil/: Makefile.am  storm_libcutil.loT
native/gpfsapi/: Makefile.am  gpfs.cpp  gpfs.hpp  gpfs31_acl.cpp  gpfs31_acl.hpp  gpfsapi_interface.i  gpfsapi_interface_wrap.cxx
native/gpfsmock/: Makefile.am
native/lcmapsutil/: Makefile.am  storm_lcmaps.c
native/posixapi/: Makefile.am  posixapi_interface.i  posixapi_interface_wrap.cxx  posixfs.cpp  posixfs.hpp  posixfs_acl.cpp  posixfs_acl.hpp  test_posixfs.cpp
native/src/: Makefile.am
native/xattrs/: Makefile.am  extended_attrs.cpp  extended_attrs.hpp  storm_xattrs.i  storm_xattrs_wrap.cxx  string_vector.i  test_xattrs.cpp
src/main/java/: README.md
src/main/java/it/grid/storm/filesystem/: AclNotSupported.java  FilesystemError.java  InvalidPathException.java  InvalidPermissionOnFileException.java  WrongFilesystemType.java
src/main/java/it/grid/storm/filesystem/swig/: .gitignore  StringVector.java  acl_not_supported.java  error.java  fs_acl.java  genericfs.java  gpfs.java  gpfs31_acl.java  gpfsapi_interface.java  gpfsapi_interfaceJNI.java  invalid_path.java  not_found.java  permission_denied.java  posixapi_interface.java  posixapi_interfaceJNI.java  posixfs.java  posixfs_acl.java  quota_info.java  quota_not_supported.java  storm_xattrs.java  storm_xattrsJNI.java  system_error.java  wrong_filesystem_type.java
src/main/java/it/grid/storm/filesystem/util/: BaseFSUtil.java  GPFSUtil.java  PosixFSUtil.java  package-info.java
