AC_INIT([storm-native-libs], [1.0.0], andrea.ceccanti@cnaf.infn.it)
AC_CONFIG_AUX_DIR([./aux])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR(src/genericfs.hpp)
AM_INIT_AUTOMAKE

AC_COPYRIGHT([Copyright (c) 2004-2013 Istituto Nazionale di Fisica Nucleare 
See LICENCE file for details
])

AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# AX_PKG_SWIG(2.0.19, [], [ AC_MSG_ERROR( [SWIG not found] ) ])


AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
